Now a footer-bar issue on iOS.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,6 +22,10 @@
   z-index: 10;            // workaround for navbar not displaying on iOS with liquidFire
 }
 
+.bar-footer {
+  z-index: 5;            // workaround for navbar not displaying on iOS with liquidFire?
+}
+
 .content.showMenu {
   left: 80%;
 }
